css/style.css
* {
  box-sizing: border-box;
}

html {
  width: 80%;
  margin: 0 auto;
  padding-top: 5%;
  font-family: 'Roboto', sans-serif;
}

body {
  max-width: 100%;
  margin: 0;
}

h3 {
  font-size: 1.7rem;
  margin: 0;
}

p {
  margin: 0;
}



a {
  text-decoration: none;
  position: absolute;
  color: black;
}

.tiles {
  display: flex;
  width: 40%;
  margin-top: 10%;
  
}

.tiles img {
  width: 100%;
  align-self: flex-start;
  margin-left: 5%;
}

.tiles-description {
  align-self: flex-end;
  max-width: 10%;
  margin-left: 1rem;
}

.tiles-verticaltext {

}


.tiles-verticaltext p {

  transform: rotate(-90deg);
  transform-origin: center;
  white-space: nowrap;
}


/* homepage */

/* about 

.about {
  text-align: center;
  background-color: black;
  padding-top: 2%;
}

.about p {
  padding: 1% 15%;
}

.about h2 {
  padding-top: 2%;
}

.profile-pic {
  width: 13%;
  padding: 1%;
}

@media (max-width: 768px) {

}

*/


/* footer */
footer {
  max-width: 100vw;
  padding-bottom: 2%;
  color: white;
  background-color: black;
  margin: 0;
}

@media (max-width: 768px) {
  h2 {
    max-width: 100%;
    font-size: 1.3rem;
    margin: 0;
    padding-bottom: 5%;
  }
}
/*
@media (max-width: 420px) {
  h2 {
    max-width: 100%;
    font-size: 1.2rem;
  }
}

/* projects */


.project-details {
  max-width: 1000px;
  margin: 0 auto;
}

.project-details img {
  max-width: 100%; 
  padding: 2% 0;
}

h4 {
  font-size: 1.5rem;
  margin: 0;
  padding-top: 2em;
  padding-bottom: 0.7Javascript-lesson1em;
}

/* Tuesdays Digital Magazine */

table, th, tr, td {
  border: 1px solid #d3d3d3;
  border-collapse: collapse;
  border-spacing: 0;
  text-align: left;
  padding: 1.5%;
  margin-top: 2%;
}

td {
  font-family: 'Raleway', sans-serif;
}

th {
  font-size: 1.2rem;
}

.tuesdays img {
  padding: 0;
}

.tuesdays p {
  margin-bottom: 2%;
}

.magazine {
  color: black;
  text-align: left;
  padding-top: 5%;
  margin: 0;
}

ul {
  font-family: 'Raleway', sans-serif;
  list-style: square;
}

.tuesdays-video {
  padding-bottom: 10%;
  z-index: -1;
}

.book-flex {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  justify-content: center;
  
}

.book-flex img {
  display: block;
  max-width:1000px;
  max-height:200px;
  width: auto;
  height: auto;
  margin: 2%;
}


.recycle-icons img {
  height: 30%;
}

.recycle-icons {
  width: 30%;
  text-align: center;
  padding: 2%;
}

.flex-recycle-icons {
  display: flex;
  flex-wrap: wrap;
}

/* link to other projects at the bottom */

.bottom-links-work {
  width: 100%;
  background-color: #ececec;
  text-align: center;
}

.bottom-links-work a{
  color: black;
  font-size: 1rem;
}

.bottom-links-work-flex {
  width: 100%;
  display: flex;
}

@media (max-width: 768px) {
  .bottom-links-work a{
  font-size: 0.7rem;
}

}

